Overflow fix.

--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -29,3 +29,7 @@ span.new {
 body {
     min-width: 370px;
 }
+
+li {
+    overflow: hidden;
+}
